Melhorias no estilo

--- a/web/index.html
+++ b/web/index.html
@@ -22,11 +22,21 @@
             <div class="top-bar topbar-sticky-shrink">
                 <div class="top-bar-center">
                     <ul class="menu" data-magellan>
-                        <li><a href="#quem-somos">Quem somos</a></li>
-                        <li><a href="#seja-um-doador">Seja um doador</a></li>
-                        <li><a href="#eventos">Eventos</a></li>
-                        <li><a href="#loja">Loja</a></li>
-                        <li><a href="#contato">Contato</a></li>
+                        <li>
+                            <a href="#quem-somos">Quem somos</a>
+                        </li>
+                        <li>
+                            <a href="#seja-um-doador">Seja um doador</a>
+                        </li>
+                        <li>
+                            <a href="#eventos">Eventos</a>
+                        </li>
+                        <li>
+                            <a href="#loja">Loja</a>
+                        </li>
+                        <li>
+                            <a href="#contato">Contato</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -84,6 +94,10 @@
                         mollis.
                     </p>
                 </div>
+            </div>
+        </div>
+        <div class="white-content" id="contato">
+            <div class="grid-container">
                 <div class="small-12 medium-12 cell">
                     <div class="cell text-center">
                         <h3>Entre em contato</h1>
