--- a/web/index.html
+++ b/web/index.html
@@ -48,7 +48,7 @@
         <div class="blue-content text-center" id="quem-somos" data-magellan-target="quem-somos">
             <div class="grid-container">
                 <h2>Quem somos</h2>
-                <div class=" small-12 medium-4 medium-offset-4 cell text-center texto-quem-somos">
+                <div class=" small-12 medium-4 medium-offset-4 cell text-center">
                     <p> Associação Novo Rumo Atibaia é uma instituição de assistência social sem fins lucrativos fundada em xxxx,
                         direcionado a jovens e adultos com deficiência intelectual, que atende de segunta a sexta-feira das
                         xx ás xx na região de Atibia. </p>
