--- a/web/index.html
+++ b/web/index.html
@@ -200,8 +200,8 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="./js/jquery.js"></script>
-    <script type="text/javascript" src="./js/foundation.js"></script>
+    <script type="text/javascript" src="./js/jquery.min.js"></script>
+    <script type="text/javascript" src="./js/foundation.min.js"></script>
     <div id="fb-root"></div>
     <script>
         $(document).foundation();
