--- a/web/index.html
+++ b/web/index.html
@@ -10,14 +10,19 @@
 </head>
 
 <body>
+
+    <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count" data-action="like"
+        data-size="small" data-show-faces="false" data-share="false"></div>
+
     <!-- HEADER -->
-    <header id="header" class="topbar-sticky-shrink-header">
-        <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count" data-action="like"
-            data-size="small" data-show-faces="false" data-share="false"></div>
-    </header>
+    <section id="header">
+        <div class="spirit" data-0p="display:block; opacity:1;" data-100p="display:none; opacity:0;">
+            <img src="img/logo-header.png" class="img-header" />
+        </div>
+    </section>
+
 
     <!-- MENU -->
-
     <nav data-50p="top:-4.25em;" data-80p="top:0px;">
         <div class="top-bar topbar-sticky-shrink">
             <div class="top-bar-center">
@@ -142,25 +147,8 @@
                 </div>
             </div>
         </div>
-
-        <div class="class=small-12 medium-12  cell mapa">
-
-            <p>
-                <a data-open="open-map"> Clique aqui para ver o mapa</a>
-            </p>
-            <div class="reveal" id="open-map" data-reveal>
-                <img src="/images/mapa.jpg" />
-                <button class="close-button" data-close aria-label="Close reveal" type="button">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-        </div>
     </div>
 
-
-
-
-    </div>
 
     <!-- FOOTER -->
     <div class="footer">
@@ -201,8 +189,8 @@
 
     <script type="text/javascript" src="./js/jquery.min.js"></script>
     <script type="text/javascript" src="./js/foundation.min.js"></script>
-    <script type="text/javascript" src="./js/skrollr.min.js"></script>
-    <script type="text/javascript" src="./js/skrollr.stylesheets.min.js"></script>
+    <script type="text/javascript" src="./js/skrollr.min.js" async></script>
+    <script type="text/javascript" src="./js/skrollr.stylesheets.min.js" async></script>
 
     <div id="fb-root"></div>
     <script>
