--- a/web/index.html
+++ b/web/index.html
@@ -22,32 +22,25 @@
 
     <!-- MENU -->
     <nav data-50p="top:-4.25em;" data-80p="top:0px;">
-        <div class="title-bar" data-responsive-toggle="example-animated-menu" data-hide-for="medium">
-            <button class="menu-icon" type="button" data-toggle></button>
-            <div class="title-bar-title">Menu</div>
-        </div>
-        <div class="top-bar main-menu" id="example-animated-menu" data-animate="hinge-in-from-top hinge-out-from-top">
-            <div class="top-bar topbar-sticky-shrink" id="example-animated-menu">
-                <div class="top-bar-center">
-                    <ul class="dropdown menu" data-dropdown-menu>
-                        <li class="menu-text">Menu</li>
-                        <li>
-                            <a href="#quem-somos">Quem somos</a>
-                        </li>
-                        <li>
-                            <a href="#seja-um-doador">Seja um doador</a>
-                        </li>
-                        <li>
-                            <a href="#eventos">Eventos</a>
-                        </li>
-                        <li>
-                            <a href="#loja">Loja</a>
-                        </li>
-                        <li>
-                            <a href="#contato">Contato</a>
-                        </li>
-                    </ul>
-                </div>
+        <div class="top-bar topbar-sticky-shrink">
+            <div class="top-bar-center">
+                <ul class="menu" data-magellan>
+                    <li>
+                        <a href="#quem-somos">Quem somos</a>
+                    </li>
+                    <li>
+                        <a href="#seja-um-doador">Seja um doador</a>
+                    </li>
+                    <li>
+                        <a href="#eventos">Eventos</a>
+                    </li>
+                    <li>
+                        <a href="#loja">Loja</a>
+                    </li>
+                    <li>
+                        <a href="#contato">Contato</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
