--- a/web/index.html
+++ b/web/index.html
@@ -20,6 +20,30 @@
         </div>
     </section>
 
+    <!-- RESPONSIVE MENU -->
+    <div class="title-bar" data-responsive-toggle="responsive-menu" data-hide-for="medium">
+        <button class="menu-icon" type="button" data-toggle></button>
+        <div class="title-bar-title">Menu</div>
+    </div>
+
+    <div class="top-bar show-for-small-only" id="responsive-menu">
+        <div class="top-bar-left">
+            <ul class=" medium-horizontal vertical dropdown menu" data-responsive-menu="accordion medium-dropdown">
+                <li class="has-submenu ">
+                    <li>
+                        <a href="#">One</a>
+                    </li>
+                    <li>
+                        <a href="#">Two</a>
+                    </li>
+                    <li>
+                        <a href="#">Three</a>
+                    </li>
+                </li>
+            </ul>
+        </div>
+    </div>
+
     <!-- MENU -->
     <nav data-50p="top:-4.25em;" data-80p="top:0px;">
         <div class="top-bar topbar-sticky-shrink">
@@ -195,16 +219,14 @@
         $(document).foundation();
 
         $(window).on('load', function () {
-            $(window).resize(function () {
-                if ($(window).width() > 1023) {
+            $(window).on('changed.zf.mediaquery', function (event, newSize, oldSize) {
+                if (newSize === "large" || newSize === "medium") {
                     skrollr.init({
                         forceHeight: false,
                         smoothScrolling: false
                     });
-                } else {
-
                 }
-            }).resize();
+            });
         });
 
         (function (d, s, id) {
