--- a/web/index.html
+++ b/web/index.html
@@ -21,30 +21,30 @@
     </section>
 
     <!-- RESPONSIVE MENU -->
-    <div class="title-bar" data-responsive-toggle="responsive-menu" data-hide-for="medium">
-        <button class="menu-icon" type="button" data-toggle></button>
-        <div class="title-bar-title">Menu</div>
-    </div>
-
-    <div class="top-bar show-for-small-only" id="responsive-menu">
-        <div class="top-bar-left">
-            <ul class=" medium-horizontal vertical dropdown menu" data-responsive-menu="accordion medium-dropdown">
-                <li>
-                    <a href="#quem-somos">Quem somos</a>
-                </li>
-                <li>
-                    <a href="#seja-um-doador">Seja um doador</a>
-                </li>
-                <li>
-                    <a href="#eventos">Eventos</a>
-                </li>
-                <li>
-                    <a href="#loja">Loja</a>
-                </li>
-                <li>
-                    <a href="#contato">Contato</a>
-                </li>
-            </ul>
+    <div class="scrollable-nav">
+        <div class="title-bar" data-responsive-toggle="responsive-menu" data-hide-for="medium">
+            <button class="menu-icon" type="button" data-toggle></button>
+        </div>
+        <div class="top-bar show-for-small-only" id="responsive-menu">
+            <div class="top-bar-left">
+                <ul class=" medium-horizontal vertical dropdown menu" data-responsive-menu="accordion medium-dropdown">
+                    <li>
+                        <a href="#quem-somos">Quem somos</a>
+                    </li>
+                    <li>
+                        <a href="#seja-um-doador">Seja um doador</a>
+                    </li>
+                    <li>
+                        <a href="#eventos">Eventos</a>
+                    </li>
+                    <li>
+                        <a href="#loja">Loja</a>
+                    </li>
+                    <li>
+                        <a href="#contato">Contato</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 
