--- a/web/index.html
+++ b/web/index.html
@@ -21,7 +21,7 @@
     </section>
 
     <!-- RESPONSIVE MENU -->
-    <div class="scrollable-nav">
+    <div class="scrollhide-nav">
         <div class="title-bar" data-responsive-toggle="responsive-menu" data-hide-for="medium">
             <button class="menu-icon" type="button" data-toggle></button>
         </div>
@@ -245,6 +245,16 @@
         function destroySkroll() {
             skrollr.init().destroy();
         }
+
+        var prev = 0;
+        var $window = $(window);
+        var nav = $('.scrollhide-nav');
+
+        $window.on('scroll', function () {
+            var scrollTop = $window.scrollTop();
+            nav.toggleClass('hidden', scrollTop > prev);
+            prev = scrollTop;
+        });
 
         (function (d, s, id) {
             var js, fjs = d.getElementsByTagName(s)[0];
