--- a/web/index.html
+++ b/web/index.html
@@ -255,7 +255,9 @@
             prev = scrollTop;
         });
 
-        $("#responsive-menu").css({"display": "none"});
+        $("dropdown li a").on("click", function() {
+            $("#responsive-menu").css({"display": "none"});
+        });
 
         (function (d, s, id) {
             var js, fjs = d.getElementsByTagName(s)[0];
