--- a/web/index.html
+++ b/web/index.html
@@ -254,7 +254,7 @@
             skrollr.init().destroy();
         }
 
-        $(".accordion-menu li").on("click", function () {
+        $(".accordion-menu li a").on("click", function () {
             $("#responsive-menu").css({ "display": "none" });
         });
 
