--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Associação Novo Rumo Atibaia</title>
     <link rel="stylesheet" href="/css/app.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/motion-ui/1.1.1/motion-ui.min.css" />
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,900" rel="stylesheet" async>
 </head>
 
@@ -16,7 +17,7 @@
     <!-- HEADER -->
     <section id="header">
         <div class="spirit" data-0p="display:block; opacity:1;" data-100p="display:none; opacity:0;">
-            <img src="img/logo-header.png" class="img-header" />
+            <img src="images/happineswall.jpg" class="img-header" />
         </div>
     </section>
 
@@ -78,22 +79,36 @@
         <div class="blue-content text-center" id="quem-somos" data-magellan-target="quem-somos">
             <div class="grid-container">
                 <h2>Quem somos</h2>
-                <div class=" small-12 medium-4 medium-offset-4 cell text-center">
-                    <p> Associação Novo Rumo Atibaia é uma instituição de assistência social sem fins lucrativos fundada em xxxx,
-                        direcionado a jovens e adultos com deficiência intelectual, que atende de segunta a sexta-feira das
-                        xx ás xx na região de Atibia. </p>
-                    <p>
-                        Proposta da Associação Novo Rumo é fazer que todos ganhem a percepção de seu potencial através de atividades que são dadas
-                        no dia a dia. Não é dado foco na deficiência, monstrando que todos nós temos dificuldades e que todos
-                        nós podemos superá-las, com ajuda de amigos ou de algum profissional que esta acompanhando as atividades
-                        do dia.
-                    </p>
 
-                    <p>
-                        O nosso maior ganho e foco esta na melhora de qualidade de vida de cada aluno que recebos, tendo como objetivo a inserção
-                        desses jovens e adultos dentro da sociedade, promovendo a inclusão social. Para chegarmos neste objetivo
-                        com sucesso, tarbalhamos com nossos alunos todos os dias em atividades específicas.
-                    </p>
+                <div class=" grid-x grid-margin-x grid__item">
+                    <a data-toggle="open-text">
+                        <img src="images/happiness.jpg" class="grid__item">
+                    </a>
+                    <div class="reveal" id="open-text" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
+                        <div class=" small-12 medium-4 medium-offset-4 cell text-center">
+                            <p> Associação Novo Rumo Atibaia é uma instituição de assistência social sem fins lucrativos fundada
+                                em xxxx, direcionado a jovens e adultos com deficiência intelectual, que atende de segunta
+                                a sexta-feira das xx ás xx na região de Atibia. </p>
+                            <p>
+                                Proposta da Associação Novo Rumo é fazer que todos ganhem a percepção de seu potencial através de atividades que são dadas
+                                no dia a dia. Não é dado foco na deficiência, monstrando que todos nós temos dificuldades
+                                e que todos nós podemos superá-las, com ajuda de amigos ou de algum profissional que esta
+                                acompanhando as atividades do dia.
+                            </p>
+
+                            <p>
+                                O nosso maior ganho e foco esta na melhora de qualidade de vida de cada aluno que recebos, tendo como objetivo a inserção
+                                desses jovens e adultos dentro da sociedade, promovendo a inclusão social. Para chegarmos
+                                neste objetivo com sucesso, tarbalhamos com nossos alunos todos os dias em atividades específicas.
+                            </p>
+                        </div>
+                        <button class="close-button" data-close aria-label="Close reveal" type="button">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                </div>
+                <div class="grid-x grid-margin-x grid__item ">
+                    <img src="images/happiness.jpg" class="grid__item">
                 </div>
             </div>
 
