--- a/web/index.html
+++ b/web/index.html
@@ -80,35 +80,39 @@
             <div class="grid-container">
                 <h2>Quem somos</h2>
 
-                <div class=" grid-x grid-margin-x grid__item">
-                    <a data-toggle="open-text">
-                        <img src="images/happiness.jpg" class="grid__item">
-                    </a>
-                    <div class="reveal" id="open-text" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
-                        <div class=" small-12 medium-4 medium-offset-4 cell text-center">
-                            <p> Associação Novo Rumo Atibaia é uma instituição de assistência social sem fins lucrativos fundada
-                                em xxxx, direcionado a jovens e adultos com deficiência intelectual, que atende de segunta
-                                a sexta-feira das xx ás xx na região de Atibia. </p>
-                            <p>
-                                Proposta da Associação Novo Rumo é fazer que todos ganhem a percepção de seu potencial através de atividades que são dadas
-                                no dia a dia. Não é dado foco na deficiência, monstrando que todos nós temos dificuldades
-                                e que todos nós podemos superá-las, com ajuda de amigos ou de algum profissional que esta
-                                acompanhando as atividades do dia.
-                            </p>
-
-                            <p>
-                                O nosso maior ganho e foco esta na melhora de qualidade de vida de cada aluno que recebos, tendo como objetivo a inserção
-                                desses jovens e adultos dentro da sociedade, promovendo a inclusão social. Para chegarmos
-                                neste objetivo com sucesso, tarbalhamos com nossos alunos todos os dias em atividades específicas.
-                            </p>
-                        </div>
-                        <button class="close-button" data-close aria-label="Close reveal" type="button">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
+                <div class="grid-x">
+                    <div class="cell large-auto">
+                        <a data-toggle="open-text">
+                            <img src="http://via.placeholder.com/560x400">
+                        </a>
+                    </div>
+                    <div class="cell large-auto">
+                        <a data-toggle="open-text">
+                            <img src="http://via.placeholder.com/560x400">
+                        </a>
                     </div>
                 </div>
-                <div class="grid-x grid-margin-x grid__item ">
-                    <img src="images/happiness.jpg" class="grid__item">
+                <div class="reveal" id="open-text" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
+                    <div class=" small-12 medium-4 medium-offset-4 cell text-center">
+                        <p> Associação Novo Rumo Atibaia é uma instituição de assistência social sem fins lucrativos fundada
+                            em xxxx, direcionado a jovens e adultos com deficiência intelectual, que atende de segunta a
+                            sexta-feira das xx ás xx na região de Atibia. </p>
+                        <p>
+                            Proposta da Associação Novo Rumo é fazer que todos ganhem a percepção de seu potencial através de atividades que são dadas
+                            no dia a dia. Não é dado foco na deficiência, monstrando que todos nós temos dificuldades e que
+                            todos nós podemos superá-las, com ajuda de amigos ou de algum profissional que esta acompanhando
+                            as atividades do dia.
+                        </p>
+
+                        <p>
+                            O nosso maior ganho e foco esta na melhora de qualidade de vida de cada aluno que recebos, tendo como objetivo a inserção
+                            desses jovens e adultos dentro da sociedade, promovendo a inclusão social. Para chegarmos neste
+                            objetivo com sucesso, tarbalhamos com nossos alunos todos os dias em atividades específicas.
+                        </p>
+                    </div>
+                    <button class="close-button" data-close aria-label="Close reveal" type="button">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
             </div>
 
