--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,7 @@
     <!-- HEADER -->
     <section id="header">
         <div class="spirit" data-0p="display:block; opacity:1;" data-100p="display:none; opacity:0;">
-            <img src="images/happineswall.jpg" class="img-header" />
+            <img src="" class="image-header" />
         </div>
     </section>
 
