Adicionado seção dia-a-dia

--- a/web/index.html
+++ b/web/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="top-bar show-for-small-only" id="responsive-menu">
             <div class="top-bar-left">
-                <ul class="medium-horizontal vertical dropdown menu" data-responsive-menu="accordion medium-dropdown">
+                <ul class="medium-horizontal vertical dropdown menu" data-responsive-menu="accordion medium-dropdown" data-magellan>
                     <li>
                         <a href="#quem-somos">Quem somos</a>
                     </li>
@@ -39,7 +39,7 @@
                         <a href="#eventos">Eventos</a>
                     </li>
                     <li>
-                        <a href="#loja">Loja</a>
+                        <a href="#dia-a-dia">Dia-a-dia</a>
                     </li>
                     <li>
                         <a href="#contato">Contato</a>
@@ -64,7 +64,7 @@
                         <a href="#eventos">Eventos</a>
                     </li>
                     <li>
-                        <a href="#loja">Loja</a>
+                        <a href="#dia-a-dia">Dia-a-dia</a>
                     </li>
                     <li>
                         <a href="#contato">Contato</a>
@@ -160,6 +160,13 @@
                         convallis eleifend velit. Donec facilisis quis purus ut mollis. Phasellus eget nibh in ex mattis
                         mollis.
                     </p>
+                </div>
+            </div>
+        </div>
+        <div class="pink-gradient-content" id="dia-a-dia" data-magellan-target="eventos">
+            <div class="grid-container grid-x">
+                <div class="cell text-center">
+                    <h3>Eventos</h3>
                 </div>
             </div>
         </div>
