--- a/web/index.html
+++ b/web/index.html
@@ -166,7 +166,11 @@
         <div class="pink-gradient-content" id="dia-a-dia" data-magellan-target="eventos">
             <div class="grid-container grid-x">
                 <div class="cell text-center">
-                    <h3>Eventos</h3>
+                    <h3>Dia-a-dia</h3>
+                    <div class="skrollable skrollable-between" data-bottom-top="-webkit-transform: translate3d(0px,0px,0px);-moz-transform: translate3d(0px,0px,0px);transform: translate3d(0px,0px,0px);"
+                        data-top-bottom="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);">
+                        <img src="/images/noticia.jpg">
+                    </div>
                 </div>
             </div>
         </div>
