--- a/web/index.html
+++ b/web/index.html
@@ -166,10 +166,20 @@
         <div class="pink-gradient-content" id="dia-a-dia" data-magellan-target="eventos">
             <div class="grid-container grid-x">
                 <div class="cell text-center">
-                    <h3>Dia-a-dia</h3>
-                    <div class="skrollable skrollable-between" data-bottom-top="-webkit-transform: translate3d(0px,0px,0px);-moz-transform: translate3d(0px,0px,0px);transform: translate3d(0px,0px,0px);"
+                    <div class="small-12 cell">
+                        <h3>Dia-a-dia</h3>
+                    </div>
+                    <div class="small-6 cell" data-bottom-top="-webkit-transform: translate3d(0px,0px,0px);-moz-transform: translate3d(0px,0px,0px);transform: translate3d(0px,0px,0px);"
                         data-top-bottom="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);">
-                        <img src="/images/noticia.jpg">
+                        <img src="/images/dia-a-dia/noticia.jpg">
+                    </div>
+                    <div class="small-12 cell" data-bottom-top="-webkit-transform: translate3d(0px,0px,0px);-moz-transform: translate3d(0px,0px,0px);transform: translate3d(0px,0px,0px);"
+                        data-top-bottom="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);">
+                        <img src="/images/dia-a-dia/noticia2.jpg">
+                    </div>
+                    <div class="small-8 cell" data-bottom-top="-webkit-transform: translate3d(0px,0px,0px);-moz-transform: translate3d(0px,0px,0px);transform: translate3d(0px,0px,0px);"
+                        data-top-bottom="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);">
+                        <img src="/images/dia-a-dia/noticia3.jpg">
                     </div>
                 </div>
             </div>
