--- a/web/index.html
+++ b/web/index.html
@@ -239,6 +239,8 @@
                 </div>
                 <div class="small-6 cell">
                     <h6>Contato</h6>
+                    <p>Telefone: (11) 3402-1623</p>
+                        <p>WhatsApp:</p>
                 </div>
             </div>
             <div class="grid-x">
