--- a/web/index.html
+++ b/web/index.html
@@ -169,17 +169,21 @@
                     <div class="small-12 cell">
                         <h3>Dia-a-dia</h3>
                     </div>
-                    <div class="small-6 cell" data-bottom-top="-webkit-transform: translate3d(0px,0px,0px);-moz-transform: translate3d(0px,0px,0px);transform: translate3d(0px,0px,0px);"
-                        data-top-bottom="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);">
-                        <img src="/images/dia-a-dia/noticia.jpg">
+                    <div class="small-8 cell float-left" data-bottom-top="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);"
+                        data-top-bottom="-webkit-transform: translate3d(0px,0px,0px);-moz-transform: translate3d(0px,0px,0px);transform: translate3d(0px,0px,0px);">
+                        <img src="/images/dia-a-dia/exercicio-ao-ar-livre.jpg">
                     </div>
-                    <div class="small-12 cell" data-bottom-top="-webkit-transform: translate3d(0px,0px,0px);-moz-transform: translate3d(0px,0px,0px);transform: translate3d(0px,0px,0px);"
+                    <div class="small-6 cell float-right" data-bottom-top="-webkit-transform: translate3d(0px,-1000px,0px);-moz-transform: translate3d(0px,-1000px,0px);transform: translate3d(0px,-100px,0px);"
                         data-top-bottom="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);">
-                        <img src="/images/dia-a-dia/noticia2.jpg">
+                        <img src="/images/dia-a-dia/artesanato-em-mesa.jpg">
                     </div>
-                    <div class="small-8 cell" data-bottom-top="-webkit-transform: translate3d(0px,0px,0px);-moz-transform: translate3d(0px,0px,0px);transform: translate3d(0px,0px,0px);"
-                        data-top-bottom="-webkit-transform: translate3d(0px,-400px,0px);-moz-transform: translate3d(0px,-400px,0px);transform: translate3d(0px,-400px,0px);">
-                        <img src="/images/dia-a-dia/noticia3.jpg">
+                    <div class="small-4 cell float-center" data-bottom-top="-webkit-transform: translate3d(0px,-300px,0px);-moz-transform: translate3d(0px,-300px,0px);transform: translate3d(0px,-300px,0px);"
+                        data-top-bottom="-webkit-transform: translate3d(0px,0px,0px);-moz-transform: translate3d(0px,0px,0px);transform: translate3d(0px,0px,0px);">
+                        <img src="/images/dia-a-dia/bazar.jpg">
+                    </div>
+                    <div class="small-5 cell float-left" data-bottom-top="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);"
+                        data-top-bottom="-webkit-transform: translate3d(0px,0px,0px);-moz-transform: translate3d(0px,0px,0px);transform: translate3d(0px,0px,0px);">
+                        <img src="/images/dia-a-dia/roda.jpg">
                     </div>
                 </div>
             </div>
