--- a/web/index.html
+++ b/web/index.html
@@ -177,13 +177,21 @@
                         data-top-bottom="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);">
                         <img src="/images/dia-a-dia/artesanato-em-mesa.jpg">
                     </div>
-                    <div class="small-4 cell float-center" data-bottom-top="-webkit-transform: translate3d(0px,-300px,0px);-moz-transform: translate3d(0px,-300px,0px);transform: translate3d(0px,-300px,0px);"
+                    <div class="small-4 cell float-center" data-bottom-top="-webkit-transform: translate3d(0px,-500px,0px);-moz-transform: translate3d(0px,-500px,0px);transform: translate3d(0px,-500px,0px);"
                         data-top-bottom="-webkit-transform: translate3d(0px,0px,0px);-moz-transform: translate3d(0px,0px,0px);transform: translate3d(0px,0px,0px);">
                         <img src="/images/dia-a-dia/bazar.jpg">
                     </div>
                     <div class="small-5 cell float-left" data-bottom-top="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);"
                         data-top-bottom="-webkit-transform: translate3d(0px,0px,0px);-moz-transform: translate3d(0px,0px,0px);transform: translate3d(0px,0px,0px);">
                         <img src="/images/dia-a-dia/roda.jpg">
+                    </div>
+                    <div class="small-7 cell float-center" data-bottom-top="-webkit-transform: translate3d(0px,-100px,0px);-moz-transform: translate3d(0px,-100px,0px);transform: translate3d(0px,-100px,0px);"
+                        data-top-bottom="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);">
+                        <img src="/images/dia-a-dia/selfie-roda.jpg">
+                    </div>
+                    <div class="small-5 cell float-right" data-bottom-top="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);"
+                        data-top-bottom="-webkit-transform: translate3d(0px,0px,0px);-moz-transform: translate3d(0px,0px,0px);transform: translate3d(0px,0px,0px);">
+                        <img src="/images/dia-a-dia/porta-porteira-portão.jpg">
                     </div>
                 </div>
             </div>
@@ -244,7 +252,7 @@
                 <div class="small-6 cell">
                     <h6>Contato</h6>
                     <p>Telefone: (11) 3402-1623</p>
-                        <p>WhatsApp:</p>
+                    <p>WhatsApp:</p>
                 </div>
             </div>
             <div class="grid-x">
