--- a/web/index.html
+++ b/web/index.html
@@ -163,62 +163,69 @@
                 </div>
             </div>
         </div>
-        <div class="pink-gradient-content" id="dia-a-dia" data-magellan-target="eventos">
-            <div class="grid-container grid-x">
-                <div class="cell text-center">
-                    <div class="small-12 cell">
-                        <h3>Dia-a-dia</h3>
-                    </div>
-                    <div class="small-8 cell float-left" data-bottom-top="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);"
-                        data-top-bottom="-webkit-transform: translate3d(0px,0px,0px);-moz-transform: translate3d(0px,0px,0px);transform: translate3d(0px,0px,0px);">
-                        <img src="/images/dia-a-dia/exercicio-ao-ar-livre.jpg">
-                    </div>
-                    <div class="small-6 cell float-right" data-bottom-top="-webkit-transform: translate3d(0px,-1000px,0px);-moz-transform: translate3d(0px,-1000px,0px);transform: translate3d(0px,-100px,0px);"
-                        data-top-bottom="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);">
-                        <img src="/images/dia-a-dia/artesanato-em-mesa.jpg">
-                    </div>
-                    <div class="small-4 cell float-center" data-bottom-top="-webkit-transform: translate3d(0px,-500px,0px);-moz-transform: translate3d(0px,-500px,0px);transform: translate3d(0px,-500px,0px);"
-                        data-top-bottom="-webkit-transform: translate3d(0px,0px,0px);-moz-transform: translate3d(0px,0px,0px);transform: translate3d(0px,0px,0px);">
-                        <img src="/images/dia-a-dia/bazar.jpg">
-                    </div>
-                    <div class="small-5 cell float-left" data-bottom-top="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);"
-                        data-top-bottom="-webkit-transform: translate3d(0px,0px,0px);-moz-transform: translate3d(0px,0px,0px);transform: translate3d(0px,0px,0px);">
-                        <img src="/images/dia-a-dia/roda.jpg">
-                    </div>
-                    <div class="small-7 cell float-center" data-bottom-top="-webkit-transform: translate3d(0px,-100px,0px);-moz-transform: translate3d(0px,-100px,0px);transform: translate3d(0px,-100px,0px);"
-                        data-top-bottom="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);">
-                        <img src="/images/dia-a-dia/selfie-roda.jpg">
-                    </div>
-                    <div class="small-5 cell float-right" data-bottom-top="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);"
-                        data-top-bottom="-webkit-transform: translate3d(0px,0px,0px);-moz-transform: translate3d(0px,0px,0px);transform: translate3d(0px,0px,0px);">
-                        <img src="/images/dia-a-dia/porta-porteira-portão.jpg">
+        <div>
+            <div class="pink-gradient-content stripe" id="dia-a-dia" data-magellan-target="dia-a-dia">
+                <div class="grid-container grid-x">
+                    <div class="cell text-center">
+                        <div class="small-12 cell">
+                            <h3>Dia-a-dia</h3>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="white-content" id="contato">
-            <div class="grid-container">
-                <div class="small-12 medium-12 cell">
+            <div class="pink-gradient-content">
+                <div class="grid-container grid-x">
                     <div class="cell text-center">
-                        <h3>Entre em contato</h3>
+                        <div class="small-8 cell float-left" data-bottom-top="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);"
+                            data-top-bottom="-webkit-transform: translate3d(0px,0px,0px);-moz-transform: translate3d(0px,0px,0px);transform: translate3d(0px,0px,0px);">
+                            <img src="/images/dia-a-dia/exercicio-ao-ar-livre.jpg">
+                        </div>
+                        <div class="small-6 cell float-right" data-bottom-top="-webkit-transform: translate3d(0px,-1000px,0px);-moz-transform: translate3d(0px,-1000px,0px);transform: translate3d(0px,-100px,0px);"
+                            data-top-bottom="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);">
+                            <img src="/images/dia-a-dia/artesanato-em-mesa.jpg">
+                        </div>
+                        <div class="small-4 cell float-center" data-bottom-top="-webkit-transform: translate3d(0px,-500px,0px);-moz-transform: translate3d(0px,-500px,0px);transform: translate3d(0px,-500px,0px);"
+                            data-top-bottom="-webkit-transform: translate3d(0px,0px,0px);-moz-transform: translate3d(0px,0px,0px);transform: translate3d(0px,0px,0px);">
+                            <img src="/images/dia-a-dia/bazar.jpg">
+                        </div>
+                        <div class="small-5 cell float-left" data-bottom-top="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);"
+                            data-top-bottom="-webkit-transform: translate3d(0px,0px,0px);-moz-transform: translate3d(0px,0px,0px);transform: translate3d(0px,0px,0px);">
+                            <img src="/images/dia-a-dia/roda.jpg">
+                        </div>
+                        <div class="small-7 cell float-center" data-bottom-top="-webkit-transform: translate3d(0px,-100px,0px);-moz-transform: translate3d(0px,-100px,0px);transform: translate3d(0px,-100px,0px);"
+                            data-top-bottom="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);">
+                            <img src="/images/dia-a-dia/selfie-roda.jpg">
+                        </div>
+                        <div class="small-5 cell float-right" data-bottom-top="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);"
+                            data-top-bottom="-webkit-transform: translate3d(0px,0px,0px);-moz-transform: translate3d(0px,0px,0px);transform: translate3d(0px,0px,0px);">
+                            <img src="/images/dia-a-dia/porta-porteira-portão.jpg">
+                        </div>
                     </div>
+                </div>
+            </div>
+            <div class="white-content" id="contato">
+                <div class="grid-container">
+                    <div class="small-12 medium-12 cell">
+                        <div class="cell text-center">
+                            <h3>Entre em contato</h3>
+                        </div>
 
-                    <div class="small-12 medium-6">
-                        <h6>Endereço</h6>
-                        <p> Papa Paulo VI, nr 182</p>
-                        <p> Vila Thais Atibaia, Sao Paulo, Brazil</p>
-                        <p>Telefone: (11) 3402-1623</p>
-                        <p>WhatsApp:</p>
+                        <div class="small-12 medium-6">
+                            <h6>Endereço</h6>
+                            <p> Papa Paulo VI, nr 182</p>
+                            <p> Vila Thais Atibaia, Sao Paulo, Brazil</p>
+                            <p>Telefone: (11) 3402-1623</p>
+                            <p>WhatsApp:</p>
 
-                    </div>
+                        </div>
 
-                    <div class="small-12 medium-6 cell">
-                        <h6>Horários</h6>
-                        <p>Segunda-Sexta,
-                            <br> 8h às 18h
-                            <br>Sábado e Domingo estamos fechados!</p>
-                    </div>
-                    <!-- <div role="form" class="medium-12 large-12 small-12 cell">
+                        <div class="small-12 medium-6 cell">
+                            <h6>Horários</h6>
+                            <p>Segunda-Sexta,
+                                <br> 8h às 18h
+                                <br>Sábado e Domingo estamos fechados!</p>
+                        </div>
+                        <!-- <div role="form" class="medium-12 large-12 small-12 cell">
                         <label>Nome (Obrigatório)
                             <input type="text">
                         </label>
@@ -237,104 +244,104 @@
 
                         <input type="submit" value="Enviar" class="button secondary hollow large">
                     </div> -->
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <!-- FOOTER -->
-    <div class="footer">
-        <div class="grid-container">
-            <div class="grid-x">
-                <div class="small-6 cell">
-                    <h6>Sobre nós</h6>
+        <!-- FOOTER -->
+        <div class="footer">
+            <div class="grid-container">
+                <div class="grid-x">
+                    <div class="small-6 cell">
+                        <h6>Sobre nós</h6>
+                    </div>
+                    <div class="small-6 cell">
+                        <h6>Contato</h6>
+                        <p>Telefone: (11) 3402-1623</p>
+                        <p>WhatsApp:</p>
+                    </div>
                 </div>
-                <div class="small-6 cell">
-                    <h6>Contato</h6>
-                    <p>Telefone: (11) 3402-1623</p>
-                    <p>WhatsApp:</p>
+                <div class="grid-x">
+                    <div class="small-6 cell">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </br>
+                            In eu sagittis felis. Etiam ante dui, iaculis vel augue et, gravida blandit nunc.</p>
+                    </div>
+                    <div class="small-6 cell">
+                        <a href="#">
+                            <div class="facebook social-icon">
+                                <img src="/images/fb.png" />
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div class="email social-icon">
+                                <img src="/images/mail.png" />
+                            </div>
+                        </a>
+                    </div>
                 </div>
-            </div>
-            <div class="grid-x">
-                <div class="small-6 cell">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </br>
-                        In eu sagittis felis. Etiam ante dui, iaculis vel augue et, gravida blandit nunc.</p>
-                </div>
-                <div class="small-6 cell">
-                    <a href="#">
-                        <div class="facebook social-icon">
-                            <img src="/images/fb.png" />
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="email social-icon">
-                            <img src="/images/mail.png" />
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="grid-x info">
-                <div class="small-6 cell">
-                    <p>Desenvolvido com carinho por Victor Fontana</p>
+                <div class="grid-x info">
+                    <div class="small-6 cell">
+                        <p>Desenvolvido com carinho por Victor Fontana</p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <script type="text/javascript" src="./js/jquery.min.js"></script>
-    <script type="text/javascript" src="./js/foundation.min.js"></script>
-    <script type="text/javascript" src="./js/skrollr.min.js" async></script>
-    <script type="text/javascript" src="./js/skrollr.stylesheets.min.js" async></script>
+        <script type="text/javascript" src="./js/jquery.min.js"></script>
+        <script type="text/javascript" src="./js/foundation.min.js"></script>
+        <script type="text/javascript" src="./js/skrollr.min.js" async></script>
+        <script type="text/javascript" src="./js/skrollr.stylesheets.min.js" async></script>
 
-    <div id="fb-root"></div>
-    <script>
-        $(document).foundation();
+        <div id="fb-root"></div>
+        <script>
+            $(document).foundation();
 
-        $(window).on('load', function () {
-            if (Foundation.MediaQuery.atLeast('medium')) {
-                initSkroll();
-            }
-        });
-        $(window).on('changed.zf.mediaquery', function (event, newSize, oldSize) {
-            if (newSize !== "small") {
-                initSkroll();
-            } else {
-                destroySkroll();
-            }
-        });
-
-        var prev = 0;
-        var $window = $(window);
-        var nav = $('.scrollhide-nav');
-        $window.on('scroll', function () {
-            var scrollTop = $window.scrollTop();
-            nav.toggleClass('hidden', scrollTop > prev);
-            prev = scrollTop;
-        });
-
-        function initSkroll() {
-            skrollr.init({
-                forceHeight: false,
-                smoothScrolling: false
+            $(window).on('load', function () {
+                if (Foundation.MediaQuery.atLeast('medium')) {
+                    initSkroll();
+                }
             });
-        }
+            $(window).on('changed.zf.mediaquery', function (event, newSize, oldSize) {
+                if (newSize !== "small") {
+                    initSkroll();
+                } else {
+                    destroySkroll();
+                }
+            });
 
-        function destroySkroll() {
-            skrollr.init().destroy();
-        }
+            var prev = 0;
+            var $window = $(window);
+            var nav = $('.scrollhide-nav');
+            $window.on('scroll', function () {
+                var scrollTop = $window.scrollTop();
+                nav.toggleClass('hidden', scrollTop > prev);
+                prev = scrollTop;
+            });
 
-        $(".accordion-menu li a").on("click", function () {
-            $("#responsive-menu").css({ "display": "none" });
-        });
+            function initSkroll() {
+                skrollr.init({
+                    forceHeight: false,
+                    smoothScrolling: false
+                });
+            }
 
-        (function (d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) return;
-            js = d.createElement(s); js.id = id;
-            js.src = 'https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v2.12&appId=269841363195323&autoLogAppEvents=1';
-            fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));
-    </script>
+            function destroySkroll() {
+                skrollr.init().destroy();
+            }
+
+            $(".accordion-menu li a").on("click", function () {
+                $("#responsive-menu").css({ "display": "none" });
+            });
+
+            (function (d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0];
+                if (d.getElementById(id)) return;
+                js = d.createElement(s); js.id = id;
+                js.src = 'https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v2.12&appId=269841363195323&autoLogAppEvents=1';
+                fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));
+        </script>
 </body>
 
 </html>
