ajuste no design

--- a/web/index.html
+++ b/web/index.html
@@ -147,14 +147,14 @@
                     <img src="/images/event-icon.png" />
                     <h3>Eventos</h3>
                     <h4>Bazar
-                        <span class="yellow">Beneficente</span>
+                        <span class="title">Beneficente</span>
                     </h4>
                 </div>
                 <div class="small-12 medium-6 cell">
-                    <h6 class="yellow text-center">Localização</h6>
+                    <h6 class="title text-center">Localização</h6>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet, ligula a convallis ullamcorper,
                         lorem lectus consectetur velit, non faucibus.</p>
-                    <h6 class="yellow text-center">Descrição</h6>
+                    <h6 class="title text-center">Descrição</h6>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris erat nulla, vehicula a nunc quis, porta
                         luctus nisi. Duis id ligula a purus feugiat volutpat eget ut leo. Ut sit amet bibendum eros. Proin
                         convallis eleifend velit. Donec facilisis quis purus ut mollis. Phasellus eget nibh in ex mattis
@@ -270,9 +270,6 @@
                     </div>
                     <div class="small-6 cell">
                         <h6>Contato</h6>
-                        <p>Telefone: (11) 3402-1623</p>
-                        <p>WhatsApp:</p>
-
                     </div>
                 </div>
                 <div class="grid-x">
