--- a/web/index.html
+++ b/web/index.html
@@ -210,15 +210,10 @@
             <div class="grid-container">
                 <div class="small-12 medium-12 cell">
 
-                    <h1>&bull; Entre em contato &bull; </h1>
+                    <h1> Entre em contato </h1>
 
-                    <div class="name small-12 medium-6">
-                        <h5>Endereço</h5>
-                        <p> Papa Paulo VI, nr 182</p>
-                        <p> Vila Thais Atibaia, Sao Paulo, Brazil</p>
-                    </div>
-                    <div class="mapa small-12 medium-6">
-                        <h5>Google Maps:</h5>
+                    <div class="linha-vertical small-12 medium-12 cell"></div>
+                    <div class="mapa small-12  medium-offset-3">
                         <a href="https://www.google.com.br/maps/place/R.+Papa+Paulo+VI,+182+-+Vila+Thais,+Atibaia+-+SP/@-23.122829,-46.5546217,17z/data=!3m1!4b1!4m5!3m4!1s0x94cec0e1a812ed13:0x6da17955b6c2899f!8m2!3d-23.1228339!4d-46.552433"
                             target="_blank">
 
@@ -226,16 +221,13 @@
                         </a>
                     </div>
 
-                    <div class="telefone small-12 medium-6">
-                        <h5>Telefones:</h5>
+                    <div class="contato-info small-12 medium-6">
+                        <p> Papa Paulo VI, nr 182</p>
+                        <p> Vila Thais Atibaia, Sao Paulo, Brazil</p>
                         <p>Telefone: (11) 3402-1623</p>
                         <p> WhatsApp:</p>
-                    </div>
-                    <div class="emails small-12 medium-6">
-                        <h5>E-mail</h5>
                         <p>contato@novorumoatibaia</p>
                     </div>
-
                 </div>
             </div>
         </div>
