--- a/web/index.html
+++ b/web/index.html
@@ -207,26 +207,21 @@
             </div>
         </div>
         <div class="white-content" id="contato">
-            <div class="grid-container">
-                <div class="small-12 medium-12 cell">
+            <h1>Entre em contato</h1>
+            <div class="grid-container grid-x">
 
-                    <h1> Entre em contato </h1>
+                <div class="small-12 medium-6 cell">
+                    <p>Papa Paulo VI, nr 182</p>
+                    <p>Vila Thais Atibaia, Sao Paulo, Brazil</p>
+                    <p>(11) 3402-1623</p>
+                    <p>contato@novorumoatibaia</p>
+                </div>
 
-                    <div class="linha-vertical small-12 medium-12 cell"></div>
-                    <div class="mapa small-12  medium-offset-3">
-                        <a href="https://www.google.com.br/maps/place/R.+Papa+Paulo+VI,+182+-+Vila+Thais,+Atibaia+-+SP/@-23.122829,-46.5546217,17z/data=!3m1!4b1!4m5!3m4!1s0x94cec0e1a812ed13:0x6da17955b6c2899f!8m2!3d-23.1228339!4d-46.552433"
-                            target="_blank">
-
-                            <img src="/images/mapa.png">
-                        </a>
-                    </div>
-
-                    <div class="contato-info small-12 medium-6">
-                        <p> Papa Paulo VI, nr 182</p>
-                        <p> Vila Thais Atibaia, Sao Paulo, Brazil</p>
-                        <p>(11) 3402-1623</p>
-                        <p>contato@novorumoatibaia</p>
-                    </div>
+                <div class="small-12 medium-6 cell">
+                    <a href="https://www.google.com.br/maps/place/R.+Papa+Paulo+VI,+182+-+Vila+Thais,+Atibaia+-+SP/@-23.122829,-46.5546217,17z/data=!3m1!4b1!4m5!3m4!1s0x94cec0e1a812ed13:0x6da17955b6c2899f!8m2!3d-23.1228339!4d-46.552433"
+                        target="_blank">
+                        <img src="/images/mapa.png">
+                    </a>
                 </div>
             </div>
         </div>
