--- a/web/index.html
+++ b/web/index.html
@@ -138,7 +138,7 @@
                 <div class="grid-x">
                     <div class="small-8 medium-8 cell hide-for-small-only"></div>
                     <div class="small-12 medium-4 cell text-center">
-                        <p>Sua doação é de extrema importancia para nós, pois com ela podemos manter nossas atividades, realizar
+                        <p>Sua doação é de extrema importância para nós, pois com ela podemos manter nossas atividades, realizar
                             manutenção e para o desenvolvimento de novos projetos para nossa Associação.
                         </p>
                     </div>
@@ -207,14 +207,37 @@
             </div>
         </div>
         <div class="white-content" id="contato">
-            <h1>Entre em contato</h1>
             <div class="grid-container grid-x">
 
                 <div class="small-12 medium-6 cell">
-                    <p>Papa Paulo VI, nr 182</p>
-                    <p>Vila Thais Atibaia, Sao Paulo, Brazil</p>
-                    <p>(11) 3402-1623</p>
-                    <p>contato@novorumoatibaia</p>
+                    <h3>Contato</h3>
+                    <table class="table table-sm" itemscope="" itemtype="http://schema.org/LocalBusiness">
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <span lang="en">endereço</span>
+                                </td>
+                                <td itemprop="address">Papa Paulo VI, 182,
+                                    <br> Vila Thais Atibaia, SP</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <span lang="en">cep</span>
+                                </td>
+                                <td>
+                                    <a class="link" href="https://www.google.com/maps/place/Av.+Dr.+Cardoso+de+Melo,+1470+-+Vila+Olimpia,+S%C3%A3o+Paulo+-+SP,+04548-005,+Brasil/@-23.596909,-46.687428,16z/data=!4m5!3m4!1s0x94ce574857dc94e3:0xae63f38ecf6fc798!8m2!3d-23.5969233!4d-46.6874359?ll=-23.596909,-46.687428&amp;z=16&amp;t=m&amp;hl=pt-BR&amp;gl=BR&amp;mapclient=embed&amp;q=Av.+Dr.+Cardoso+de+Melo,+1470+-+Vila+Olimpia+S%C3%A3o+Paulo+-+SP+04548-005">04548-005</a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <span lang="en">telefone</span>
+                                </td>
+                                <td itemprop="telephone">
+                                    <a class="link" href="tel:+55 (11) 3402-1623">+55 (11) 3402-1623</a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
 
                 <div class="small-12 medium-6 cell">
@@ -252,7 +275,7 @@
                             <img src="/images/fb.png" />
                         </div>
                     </a>
-                    <a href="#">
+                    <a href="mailto:contato@novorumoatibaia">
                         <div class="email social-icon">
                             <img src="/images/mail.png" />
                         </div>
