--- a/web/index.html
+++ b/web/index.html
@@ -217,15 +217,15 @@
                                 <td>
                                     <span lang="en">endereço</span>
                                 </td>
-                                <td itemprop="address">Papa Paulo VI, 182,
-                                    <br> Vila Thais Atibaia, SP</td>
+                                <td itemprop="address">Rua Papa Paulo VI, 182
+                                    <br> Vila Thais - Atibaia, SP</td>
                             </tr>
                             <tr>
                                 <td>
                                     <span lang="en">cep</span>
                                 </td>
                                 <td>
-                                    <a class="link" href="">12345-678</a>
+                                    <a class="link" href="https://www.google.com.br/maps/place/R.+Papa+Paulo+VI,+182+-+Vila+Thais,+Atibaia+-+SP/@-23.122829,-46.5546217,17z/data=!3m1!4b1!4m5!3m4!1s0x94cec0e1a812ed13:0x6da17955b6c2899f!8m2!3d-23.1228339!4d-46.552433">12345-678</a>
                                 </td>
                             </tr>
                             <tr>
@@ -233,7 +233,18 @@
                                     <span lang="en">telefone</span>
                                 </td>
                                 <td itemprop="telephone">
-                                    <a class="link" href="tel:+55 (11) 3402-1623">+55 (11) 3402-1623</a>
+                                    <a class="link" href="tel:+55 (11) 3402-1623">+55 (11) 3402-1623</a><br/>
+                                    <a class="link" href="tel:+55 (11) 3402-1623">+55 (11) 94777-5762</a><br/>
+                                    <a class="link" href="tel:+55 (11) 3402-1623">+55 (11) 97100-5077</a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <span lang="en">email</span>
+                                </td>
+                                <td itemprop="telephone">
+                                    <a href="mailto:contato@novorumoatibaia.com.br">contato@novorumoatibaia.com.br</a>
+                                    <img src="/images/mail.png" />
                                 </td>
                             </tr>
                         </tbody>
@@ -281,7 +292,9 @@
             </div>
             <div class="grid-x info">
                 <div class="small-12 cell">
-                    <p>Desenvolvido com carinho por <a href="http://www.victorfontana.com.br">Victor Fontana</a></p>
+                    <p>Desenvolvido com carinho por
+                        <a href="http://www.victorfontana.com.br">Victor Fontana</a>
+                    </p>
                 </div>
             </div>
         </div>
