Adding checkout view

--- a/web/layout.html
+++ b/web/layout.html
@@ -10,102 +10,22 @@
 </head>
 
 <body>
-    <nav class="hide-for-small-only no-top">
-        <div class="top-bar topbar-sticky-shrink">
-            <div class="top-bar-center">
-                <ul class="menu">
-                    <li>
-                        <a href="#quem-somos">Quem somos</a>
-                    </li>
-                    <li>
-                        <a href="#seja-um-doador">Seja um doador</a>
-                    </li>
-                    <li>
-                        <a href="#eventos">Eventos</a>
-                    </li>
-                    <li>
-                        <a href="#dia-a-dia">Dia-a-dia</a>
-                    </li>
-                    <li>
-                        <a href="#contato">Contato</a>
-                    </li>
-                </ul>
-            </div>
+    <header class="navbar grid-x grid-container" data-role="navigation">
+        <div>
+            <h1>
+                <a href="/">
+                    <img src="http://via.placeholder.com/250x150" alt="Logo Novo Rumo">
+                </a>
+            </h1>
         </div>
-    </nav>
+        <div>
+            <!-- Progresso -->
+        </div>
+    </header>
 
-    <main class="content">
-        <div class="grid-container">
-            <div class="grid-x">
-                <div class="small-12 cell">
-                    <h4>Doação mensal</h4>
-                    <p>Sim! Quero ser um doador do Novo Rumo, contribuindo mensalmente com:</p>
-                    <div class="grid-x">
-                        <div class="callout grid-x">
-                            <div class="small-2">
-                                R$ 15,00 (R$ 1,00 POR DIA)
-                            </div>
-                            <div class="small-1"> = </div>
-                            <div class="small-8">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum diam mauris, eleifend egestas sollicitudin eget, tempus
-                                vitae mi. Nam lectus.
-                            </div>
-                        </div>
-                        <div class="callout grid-x">
-                            <div class="small-2">
-                                R$ 30,00 (R$ 2,00 POR DIA)
-                            </div>
-                            <div class="small-1"> = </div>
-                            <div class="small-8">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum diam mauris, eleifend egestas sollicitudin eget, tempus
-                                vitae mi. Nam lectus.
-                            </div>
-                        </div>
-                    </div>
-                    <input type="submit" class="button large primary" value="Enviar" />
-                </div>
-            </div>
-        </div>
+    <main class="">
+        <!-- RenderPage -->
     </main>
-
-    <!-- FOOTER -->
-    <div class="footer">
-        <div class="grid-container">
-            <div class="grid-x hide-for-small-only">
-                <div class="small-6 cell">
-                    <h6>Sobre nós</h6>
-                </div>
-                <div class="small-6 cell">
-                    <h6>Contato</h6>
-                </div>
-            </div>
-            <div class="grid-x hide-for-small-only">
-                <div class="small-6 cell">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </br>
-                        In eu sagittis felis. Etiam ante dui, iaculis vel augue et, gravida blandit nunc.</p>
-                </div>
-                <div class="small-6 cell">
-                    <a href="#">
-                        <div class="facebook social-icon">
-                            <img src="/images/fb.png" />
-                        </div>
-                    </a>
-                    <a href="mailto:contato@novorumoatibaia">
-                        <div class="email social-icon">
-                            <img src="/images/mail.png" />
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="grid-x info">
-                <div class="small-12 cell">
-                    <p>Desenvolvido com carinho por
-                        <a href="http://www.victorfontana.com.br">Victor Fontana</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <script type="text/javascript" src="./js/jquery.min.js"></script>
     <script type="text/javascript" src="./js/foundation.min.js"></script>
