Adapting for responsive

--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,7 @@
     <!-- HEADER -->
     <section id="header">
         <div class="spirit" data-0p="display:block; opacity:1;" data-100p="display:none; opacity:0;">
-            <img src="" class="image-header" />
+            <img src="/images/Banner_v2.png" class="image-header" />
         </div>
     </section>
 
